tests/ty-reporting/out.txt
error: mismatched types: expected { lab_1 : int -> int -> int, lab_2 : int * int -> int, lab_3 : int * (int -> int), lab_4 : (int -> int) -> int, lab_5 : int list list, lab_6 : int -> int list, lab_7 : (int -> int) list, lab_8 : int * int list, lab_9 : (int * int) list }, found unit
   ┌─ err.sml:13:1
   │
13 │ val _ : t = ()
   │ ^^^^^^^^^^^^^^

typechecking failed
